--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://DuongTanPhat.github.io/poll-client",
+  "homepage": "http://duongtanphat.github.io/poll-client",
   "name": "polling-app-client",
   "version": "0.1.0",
   "private": true,
