--- a/package.json
+++ b/package.json
@@ -7,12 +7,10 @@
     "antd": "^4.10.2",
     "antd-img-crop": "^3.14.0",
     "axios": "^0.21.1",
-    "react-audio-player": "^0.16.1",
+    "react-google-login": "^5.2.2",
     "react-infinite-scroller": "^1.2.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.3",
     "sockjs-client": "^1.5.1",
     "stompjs": "^2.3.3"
   },
